updated starship data to drop unknowns

--- a/Scripts/static/py/Starship Hierarchy.ipynb
+++ b/Scripts/static/py/Starship Hierarchy.ipynb
@@ -819,6 +819,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for index, row in starships_df2.iterrows():\n",
+    "    if row['max_atmosphering_speed'] == \"unknown\":\n",
+    "        starships_df2.drop(index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in starships_df2.iterrows():\n",
+    "    if row['hyperdrive_rating'] == \"unknown\":\n",
+    "        starships_df2.drop(index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in starships_df2.iterrows():\n",
+    "    if row['MGLT'] == \"unknown\":\n",
+    "        starships_df2.drop(index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in starships_df2.iterrows():\n",
+    "    if row['passengers'] == \"unknown\":\n",
+    "        starships_df2.drop(index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "starships_df2.to_csv(\"../data/starship_2.csv\")"
    ]
   },
@@ -828,8 +872,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "starships_df =starships_df.drop(columns=[\"model\", \"manufacturer\", \"length\", \"max_atmosphering_speed\", \"crew\", \"cargo_capacity\", \"consumables\", \"MGLT\"])\n",
-    "starships_df"
+    "# starships_df =starships_df.drop(columns=[\"model\", \"manufacturer\", \"length\", \"max_atmosphering_speed\", \"crew\", \"cargo_capacity\", \"consumables\", \"MGLT\"])\n",
+    "# starships_df"
    ]
   },
   {
@@ -838,8 +882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "starships_df = starships_df[['hyperdrive_rating', 'starship_class', 'name', 'cost_in_credits', 'passengers']]\n",
-    "starships_df"
+    "# starships_df = starships_df[['hyperdrive_rating', 'starship_class', 'name', 'cost_in_credits', 'passengers']]\n",
+    "# starships_df"
    ]
   },
   {
@@ -848,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "starships_df.sort_values(by=['hyperdrive_rating', 'starship_class'])"
+    "# starships_df.sort_values(by=['hyperdrive_rating', 'starship_class'])"
    ]
   },
   {
@@ -857,7 +901,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "starships_df.to_json(\"../js/starship_hierarchy.json\")"
+    "# starships_df.to_json(\"../js/starship_hierarchy.json\")"
    ]
   },
   {
