--- a/Scripts/static/py/starships_bargraphs.ipynb
+++ b/Scripts/static/py/starships_bargraphs.ipynb
@@ -912,15 +912,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -931,8 +922,8 @@
     "plt.ylabel(\"Hyperdrive Rating\")\n",
     "plt.title(\"Hyperdrive Rating by Starship\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../images/hyperdrive.png\")"
+    "plt.savefig(\"../images/hyperdrive.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -946,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1184,7 @@
        "35                         V-wing                   1050"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1238,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1283,15 +1274,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1302,13 +1284,13 @@
     "plt.ylabel(\"Max Atmosphering Speed\")\n",
     "plt.title(\"Max Atmosphering Speed by Starship\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../images/max.png\")"
+    "plt.savefig(\"../images/max.png\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1546,7 @@
        "35                         V-wing          0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1598,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1600,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1654,15 +1636,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1673,13 +1646,13 @@
     "plt.ylabel(\"Number of Passengers\")\n",
     "plt.title(\"Number of Passengers by Starship\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../images/passengers.png\")"
+    "plt.savefig(\"../images/passengers.png\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,14 +1695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-36-468691c3901a>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-29-468691c3901a>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1744,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1728,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1791,15 +1764,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1810,16 +1774,9 @@
     "plt.ylabel(\"Megalights\")\n",
     "plt.title(\"Megalights by Starship\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../images/mglt.png\")"
+    "plt.savefig(\"../images/mglt.png\")\n",
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
